[gd_scene load_steps=6 format=2]

[ext_resource path="res://Game/Match/Match.tscn" type="PackedScene" id=1]
[ext_resource path="res://Networking/Lobby2/Lobby2.gd" type="Script" id=2]
[ext_resource path="res://CharSelect/CharacterSelect.tscn" type="PackedScene" id=3]
[ext_resource path="res://Networking/ConnectionScreen/ConnectionScreen.tscn" type="PackedScene" id=4]
[ext_resource path="res://Networking/Lobby2/SecretButton.gd" type="Script" id=5]

[node name="Lobby" type="Node"]
script = ExtResource( 2 )

[node name="Match" parent="." groups=["network_sync"] instance=ExtResource( 1 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 64

[node name="SyncLost" type="Label" parent="CanvasLayer"]
visible = false
margin_right = 40.0
margin_bottom = 14.0
rect_scale = Vector2( 10, 10 )
text = "BRUH"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterSelect" parent="CanvasLayer" instance=ExtResource( 3 )]

[node name="ConnectionScreen" parent="CanvasLayer" instance=ExtResource( 4 )]

[node name="SecretButton" type="Button" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0.0941176 )
anchor_left = 0.5
anchor_top = 0.95
anchor_right = 0.5
anchor_bottom = 0.95
margin_left = 500.0
margin_right = 500.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 1, 1, 1 )
text = "secret butt"
script = ExtResource( 5 )

[connection signal="button_up" from="CanvasLayer/SecretButton" to="CanvasLayer/SecretButton" method="_on_SecretButton_button_up"]
